Update RecommenderService.java