@@ -1,14 +1,17 @@
 package br.com.concorrente;
 
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
 
 public class RecommenderService {
     private DataManager dataManager;
-    private static final int NUM_THREADS = 20; // Número de threads a serem usadas
+    private static final int NUM_THREADS = 4;
+    private final AtomicReference<Map<Integer, Double>> similaritiesRef;
     private final Object lock = new Object();
 
     public RecommenderService(DataManager dataManager) {
         this.dataManager = dataManager;
+        this.similaritiesRef = new AtomicReference<>(new HashMap<>());
     }
 
     public List<Map.Entry<String, Double>> recommendBooks(String userId, int k) {
@@ -24,7 +27,6 @@ public class RecommenderService {
         Map<Integer, Double> userRatings = ratingsMatrix.getOrDefault(userIdx, new HashMap<>());
 
         List<Thread> threads = new ArrayList<>();
-        Map<Integer, Double> similarities = new HashMap<>();
 
         List<Map.Entry<Integer, Map<Integer, Double>>> entries = new ArrayList<>(ratingsMatrix.entrySet());
         int numEntries = entries.size();
@@ -34,20 +36,21 @@ public class RecommenderService {
             int startIdx = i * chunkSize;
             int endIdx = (i == NUM_THREADS - 1) ? numEntries : (i + 1) * chunkSize;
 
-            Thread thread = Thread.ofPlatform().start(() -> {
+            Thread thread = new Thread(() -> {
+                Map<Integer, Double> threadSimilarities = new HashMap<>();
                 for (int j = startIdx; j < endIdx; j++) {
                     Map.Entry<Integer, Map<Integer, Double>> entry = entries.get(j);
                     int otherUserIdx = entry.getKey();
                     if (otherUserIdx != userIdx) {
                         double similarity = calculateCosineSimilarity(userRatings, entry.getValue());
                         if (similarity > 0) {
-                            synchronized (lock) {
-                                similarities.put(otherUserIdx, similarity);
-                            }
+                            threadSimilarities.put(otherUserIdx, similarity);
                         }
                     }
                 }
+                mergeSimilarities(threadSimilarities);
             });
+            thread.start();
             threads.add(thread);
         }
 
@@ -60,7 +63,7 @@ public class RecommenderService {
             }
         }
 
-        List<Map.Entry<Integer, Double>> similarUsers = new ArrayList<>(similarities.entrySet());
+        List<Map.Entry<Integer, Double>> similarUsers = new ArrayList<>(similaritiesRef.get().entrySet());
         similarUsers.sort((e1, e2) -> Double.compare(e2.getValue(), e1.getValue()));
 
         List<Map.Entry<String, Double>> recommendedBooks = new ArrayList<>();
@@ -100,5 +103,20 @@ public class RecommenderService {
         }
 
         return dotProduct / (Math.sqrt(normVector1) * Math.sqrt(normVector2));
+    }
+
+    private void mergeSimilarities(Map<Integer, Double> threadSimilarities) {
+        while (true) {
+            Map<Integer, Double> currentSimilarities = similaritiesRef.get();
+            Map<Integer, Double> newSimilarities = new HashMap<>(currentSimilarities);
+            for (Map.Entry<Integer, Double> entry : threadSimilarities.entrySet()) {
+                int otherUserIdx = entry.getKey();
+                double similarity = entry.getValue();
+                newSimilarities.put(otherUserIdx, similarity);
+            }
+            if (similaritiesRef.compareAndSet(currentSimilarities, newSimilarities)) {
+                break;
+            }
+        }
     }
 }
